@@ -70,8 +70,9 @@ def write_test_result(port, test_name, driver_output,
         elif isinstance(failure, test_failures.FailureReftestMismatch):
             writer.write_image_files(driver_output.image, expected_driver_output.image)
             # FIXME: This work should be done earlier in the pipeline (e.g., when we compare images for non-ref tests).
-            image_diff = port.diff_image(driver_output.image, expected_driver_output.image)[0]
-            if image_diff:
+            # FIXME: We should always have 2 images here.
+            if driver_output.image and expected_driver_output.image:
+                image_diff = port.diff_image(driver_output.image, expected_driver_output.image)[0]
                 writer.write_image_diff_files(image_diff)
             writer.copy_file(failure.reference_filename)
         elif isinstance(failure, test_failures.FailureReftestMismatchDidNotOccur):
